Bug 139636 - UI: Thumbnail in start center shows changes. Hidden expected
Summary: UI: Thumbnail in start center shows changes. Hidden expected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium trivial
Assignee: Justin L
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2021-01-15 11:11 UTC by Telesto
Modified: 2024-02-02 17:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-01-15 11:11:16 UTC
Description:
UI: Thumbnail in start center shows changes. Hidden expected

Steps to Reproduce:
1. Open attachment 162927 [details]
2. Edit -> track changes -> Show changes
3. Close document
4. Look at start center thumbnail
5. Open document

Actual Results:
Thumbnail shows 'show track changes' whereas on opening this not being the case

Expected Results:
Thumbnail should show document with changes hidden


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: f2171af6ce3516598d9f8bac8294025a21a5b1a2
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-01-15 11:13:34 UTC
Also in
Version: 6.2.4.0.0+
Build ID: 5c5eab3522368d6baa7ab6ef1b6c9f5eaaab4fad
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

still ok in
Versie: 6.0.4.1
Build ID: a63363f6506b8bdc5222481ce79ef33b2d13c741
CPU-threads: 4; Besturingssysteem: Windows 6.3; UI-render: GL; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 Dieter 2021-05-20 06:09:47 UTC
I confirm it with

Version: 7.1.3.2 (x64) / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 3 Justin L 2021-11-27 10:30:52 UTC
This started in 6.3 (backported to 6.2) with
author Michael Stahl on 2018-12-18 17:55:30 +0100
commit 32902f66e7749b2d06d13f50416be5323a0c0ea9
    sw_redlinehide: make layout based Show/Hide mode the default

The difference is that prior to the commit, the user was asked if they wanted to save the document on exit.  No meant that the thumbnail was not updated.

Now you can close the document without being asked to save. But something is regenerating the thumbnail.
Comment 4 Justin L 2021-12-10 17:08:09 UTC
(In reply to Justin L from comment #3)
> But something is regenerating the thumbnail.
Apparently, it always has on document close. (Apparently a cancelled save bypasses this.)

        case SfxEventHintId::OpenDoc:
        case SfxEventHintId::SaveDocDone:
        case SfxEventHintId::SaveAsDocDone:
        case SfxEventHintId::SaveToDocDone:
        case SfxEventHintId::CloseDoc:
        {
            AddDocumentToPickList(pDocSh);
        }
So always on close, the thumbnail is updated if not modified. (Not sure why, but from 2001 when this was all revised, on CloseDoc was the only item in this list.) Perhaps now that open/save cover this, we could remove the closeDoc case completely? Not sure what purpose it serves to remain here.

No unit test failures occurred when removing case SfxEventHintId::CloseDoc:
http://gerrit.libreoffice.org/c/core/+/126649
Comment 5 QA Administrators 2023-12-11 03:14:41 UTC Comment hidden (obsolete)
Comment 6 Dieter 2023-12-28 18:36:10 UTC
Still present in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 40617d867346956588ac023511f31210107217f4
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 7 Commit Notification 2024-01-05 10:14:23 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f6d845e10737d6ad1fec1c0ff660baae0ce3f3c

tdf#139636 thumbnail: don't regenerate on file close

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2024-01-05 10:16:26 UTC
thanks Justin for fixing this
Comment 9 Commit Notification 2024-01-05 12:08:45 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c806266613b5a110caa6a50327d264173d6a17d5

tdf#139636 thumbnail: don't regenerate on file close

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.