tdf#139636 thumbnail: don't regenerate on file close

Back in 2001, this might have been the primary time
then the thumbnail was generated. Now it is generated
on file open and file-save. This bug report is at least
one example why regenerating on exit is not desireable.

But are there examples of why it IS needed?
It is only generated if the document is not modified.
One way it can change is viewing track changes.
What other things can affect the document layout
without be considered a modification?

Change-Id: Ic08fefadb7a2ff594dc2788dfc9cf9e0cc528a71